added app insights

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "dbe82c4a-2416-487b-b97d-53e6a1e31ec0"
   }
 }
